# LAOS-v8

./: .gitattributes  .gitignore  .gitleaksignore  ADR_REGISTER.json  ALPHA_EXPERIMENT_PROTOCOL.json  BASELINE_MANIFEST.json  CRYPTOGRAPHIC_PROFILE.md  DEPENDENCY_DECISION.md  ENGINEERING_OVERVIEW.md  IMPLEMENTATION_BACKLOG.json  IMPLEMENTATION_STATUS.json  KNOWN_DEFECTS.md  LAOS_v8_EXECUTION_AND_RELEASE_PLAN.md  LAOS_v8_PLAN_REVIEW_2026-07-12.md  LAOS_v8_TEN_STAGE_IMPLEMENTATION_PLAN.md  LIMITATIONS_REGISTER.md  MIGRATION_MATRIX.json  MILESTONE_LEDGER.json  PERFORMANCE_BUDGETS.md  PERFORMANCE_BUDGETS_STAGE4_CANDIDATE.md  PERFORMANCE_LEDGER.json  PERMISSION_ENFORCEMENT_MATRIX.json  PLATFORM_GOLDEN_VECTORS.json  PROGRAM_STAGE_LEDGER.json  README.md  RECOVERY_STATE.md  RELEASE_BLOCKERS.json  REQUIREMENTS_LEDGER.json  SANDBOX_PROFILE.json  SCOPE_LEDGER.json  STAGE_3_THREAT_COVERAGE.json  STAGE_4_ALPHA_COVERAGE.json  STAGE_4_GO_NO_GO_AND_SCOPE_FREEZE_CANDIDATE.md  STAGE_5_CORE_WORKFLOW_COVERAGE.json  STAGE_6_EXECUTION_ASSURANCE_COVERAGE.json  SUPPORTED_ENVIRONMENTS.json  THREAT_MODEL_DRAFT.md  THREAT_REGISTER.json  VERSION  pyproject.toml
Evidence/: DOCKER_AUTOSTART_VERIFICATION.json  MILESTONE_0_EXIT_GATE.md  README.md  STAGE_0_TOOL_TESTS.json  STAGE_0_VERIFICATION.json  STAGE_1_CANDIDATE_VERIFICATION.json  STAGE_1_CANDIDATE_VERIFICATION.md  STAGE_1_CLEAN_RECONSTRUCTION.json  STAGE_1_CLEAN_RECONSTRUCTION.md  STAGE_1_REVIEW.json  STAGE_1_REVIEW.md  STAGE_2_CANDIDATE_EVIDENCE.json  STAGE_2_CANDIDATE_EVIDENCE.md  STAGE_2_DEPENDENCY_POC.json  STAGE_2_LOCAL_PLATFORM.json  STAGE_2_MIGRATION_DISCOVERY.json  STAGE_2_REVIEW.json  STAGE_2_REVIEW.md  STAGE_2_VERIFICATION.json  STAGE_3_CANDIDATE_EVIDENCE.json  STAGE_3_CANDIDATE_EVIDENCE.md  STAGE_3_DEPENDENCY_AMENDMENT.json  STAGE_3_LOCAL_SECURITY_PROFILE.json  STAGE_3_REVIEW.json  STAGE_3_REVIEW.md  STAGE_3_VERIFICATION.json  STAGE_4_REVIEW.md  (+38 more)
tools/codex-docker-bootstrap/: README.md  pyproject.toml
tools/codex-docker-bootstrap/src/codex_docker_bootstrap/: __init__.py  cli.py
tools/codex-docker-bootstrap/tests/: test_cli.py
(+279 files in other folders)
