[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "codex-docker-bootstrap"
version = "1.0.0"
description = "Profile-wide, fail-closed Docker Desktop on-demand bootstrap"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
docker = "codex_docker_bootstrap.cli:docker_main"
docker-compose = "codex_docker_bootstrap.cli:compose_main"
ensure-docker-desktop = "codex_docker_bootstrap.cli:ensure_main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_docker_bootstrap"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "S"]
ignore = ["S101"]
